Fix tagline alignment in banner.css

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -23,7 +23,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   position: absolute;
-  top: 45%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
